completato crud article